Day1/Cloud Computing 6/modules/eks/manifest/book/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: book-svc
  namespace: skills
  labels:
    app: book
spec:
  type: ClusterIP
  selector:
    app: book
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
